@@ -27,6 +27,11 @@
     <para>
       This document is for testing purpose only.
       It is generated from Docbook-<acronym>XML</acronym>.
+      <footnote>
+        <para>
+          Most of the actual text is quite non-sense. Don't pay attention.
+        </para>
+      </footnote>
     </para>
   </preface>
   
