@@ -1,5 +1,14 @@
 2009-01-28  Stefan Kost  <ensonic@users.sf.net>
 
+	* style-classic.css:
+	* style.css:
+	* tests/gobject/docs/tester-docs.xml:
+	* tests/gobject/src/gobject.c:
+	  Major CSS cleanup. This is hopefully an end of layout issues related
+	  to the fixed navigation bar.
+
+2009-01-28  Stefan Kost  <ensonic@users.sf.net>
+
 	patch by: David Nečas <yeti@physics.muni.cz>
 
 	* gtkdoc-mkdb.in:
